🎨 style(theme.css): add custom styles for InputNumber component 🚀 feat(FileDialog.tsx): add InputNumber component for maxStreamCount and startingChannelNumber fields 🔥 chore(PlayListDataSelectorPicker.tsx): remove console.log statement The custom styles for the InputNumber component were added to the theme.css file. The FileDialog component was updated to use the InputNumber component for the maxStreamCount and startingChannelNumber fields. The PlayListDataSelectorPicker component had a console.log statement removed.

--- a/streammasterwebui/src/theme.css
+++ b/streammasterwebui/src/theme.css
@@ -102,6 +102,12 @@
   max-height: 1.8rem;
 }
 
+.p-inputnumber.p-component.p-inputwrapper.p-inputwrapper-filled.withpadding{
+  border: 2px solid var(--surface-border) !important;
+    max-height: 1.8rem;
+    height: 1.8rem;
+    border-radius: 6px;
+}
 
 .p-inputnumber.p-component.p-inputwrapper.p-inputnumber-buttons-stacked.withpadding.p-0.m-0{
   border: 2px solid var(--surface-border) !important;
