--- a/streammasterwebui/src/theme.css
+++ b/streammasterwebui/src/theme.css
@@ -147,6 +147,18 @@
   font-size: calc(1 * (0.5vw + 0.5vh)) !important;
 }
 
+.p-dropdown-label.p-inputtext{
+  border: var(--surface-border) 2px solid !important;
+    padding: .6rem;
+    border-color: var(--surface-border) !important;
+      background: var(--mask-bg) !important;
+      overflow: hidden !important;
+      text-overflow: ellipsis !important;
+      white-space: nowrap !important;
+      padding: 0.3rem;
+      transition: border-color 0.3s;
+}
+
 .p-checkbox-box.p-component{
   width: 1rem !important;
   height: 1rem !important;
