--- a/streammasterwebui/src/theme.css
+++ b/streammasterwebui/src/theme.css
@@ -4,19 +4,19 @@
   width: 1.2rem !important;
 }
 
-.p-button.p-component.p-button-rounded.min-h-3rem.p-button-success.p-button-icon-only{
+.p-button.p-component.p-button-rounded.min-h-3rem.p-button-success.p-button-icon-only {
   height: 2rem !important;
   padding: 0 !important;
   width: 2rem !important;
 }
 
-.p-button.p-component.p-button-rounded.min-h-3rem.p-button-danger.p-button-icon-only{
+.p-button.p-component.p-button-rounded.min-h-3rem.p-button-danger.p-button-icon-only {
   height: 2rem !important;
   padding: 0 !important;
   width: 2rem !important;
 }
 
-.p-button.p-fileupload-choose.p-component.p-button-icon-only.p-button-rounded.min-h-3rem.p-button-info{
+.p-button.p-fileupload-choose.p-component.p-button-icon-only.p-button-rounded.min-h-3rem.p-button-info {
   height: 2rem !important;
   padding: 0 !important;
   width: 2rem !important;
@@ -30,7 +30,7 @@
   font-size: calc(1 * (0.5vw + 0.5vh)) !important;
 }
 
-.p-inputtext.withpadding{
+.p-inputtext.withpadding {
   border-color: var(--surface-border) !important;
   background: var(--mask-bg) !important;
   overflow: hidden !important;
@@ -40,25 +40,25 @@
   transition: border-color 0.3s;
 }
 
-.sm-inputtext{
+.sm-inputtext {
   font-size: calc(1 * (0.5vw + 0.5vh)) !important;
   border-color: transparent !important;
   background: var(--mask-bg) !important;
   overflow: hidden !important;
   text-overflow: ellipsis !important;
   white-space: nowrap !important;
-  padding: 0rem ;
+  padding: 0rem;
   transition: border-color 0.3s;
 }
 
-.p-inputtext{
+.p-inputtext {
   font-size: calc(1 * (0.5vw + 0.5vh)) !important;
   border-color: transparent !important;
   background: var(--mask-bg) !important;
   overflow: hidden !important;
   text-overflow: ellipsis !important;
   white-space: nowrap !important;
-  padding: 0rem ;
+  padding: 0rem;
   transition: border-color 0.3s;
 }
 
@@ -102,25 +102,25 @@
   max-height: 1.8rem;
 }
 
-.p-inputnumber.p-component.p-inputwrapper.p-inputwrapper-filled.withpadding{
+.p-inputnumber.p-component.p-inputwrapper.p-inputwrapper-filled.withpadding {
   border: 2px solid var(--surface-border) !important;
-    max-height: 1.8rem;
-    height: 1.8rem;
-    border-radius: 6px;
+  max-height: 1.8rem;
+  height: 1.8rem;
+  border-radius: 6px;
 }
 
-.p-inputnumber.p-component.p-inputwrapper.p-inputnumber-buttons-stacked.withpadding.p-0.m-0{
+.p-inputnumber.p-component.p-inputwrapper.p-inputnumber-buttons-stacked.withpadding.p-0.m-0 {
   border: 2px solid var(--surface-border) !important;
   max-height: 1.8rem;
   border-radius: 6px;
 }
 
-.p-inputnumber.p-component.p-inputwrapper.p-inputwrapper-filled.p-inputnumber-buttons-stacked.withpadding{
+.p-inputnumber.p-component.p-inputwrapper.p-inputwrapper-filled.p-inputnumber-buttons-stacked.withpadding {
   border: 2px solid var(--surface-border) !important;
   border-radius: 6px;
 }
 
-.p-password.p-component.p-inputwrapper.p-inputwrapper-filled.p-input-icon-right.withpadding{
+.p-password.p-component.p-inputwrapper.p-inputwrapper-filled.p-input-icon-right.withpadding {
   border: 2px solid var(--surface-border) !important;
   border-radius: 6px;
 }
@@ -129,9 +129,15 @@
   border-color: var(--blue-500) !important;
 }
 
-.p-dropdown.p-component.p-inputwrapper.p-inputwrapper-filled.flex.w-full{
+.p-dropdown.p-component.p-inputwrapper.p-inputwrapper-filled.flex.w-full {
   border: #FE7600 2px solid !important;
   border-left-color: #0e1315 !important;
+}
+
+.p-dropdown.p-component.p-inputwrapper.p-inputwrapper-filled.w-full {
+  border: 2px solid var(--surface-border) !important;
+  border-radius: 6px;
+  max-height: 2rem !important;
 }
 
 .p-dropdown {
@@ -139,55 +145,53 @@
   border: 0;
 }
 
-.p-dropdown-trigger{
-  color:#0e1315 !important;
+.p-dropdown-trigger {
+  color: #0e1315 !important;
 }
 
 .p-dropdown-label {
   font-size: calc(1 * (0.5vw + 0.5vh)) !important;
 }
 
-.p-dropdown-label.p-inputtext{
-
-    padding: .6rem;
-    border-color: var(--surface-border) !important;
-      background: var(--mask-bg) !important;
-      overflow: hidden !important;
-      text-overflow: ellipsis !important;
-      white-space: nowrap !important;
-      padding: 0.3rem;
-      transition: border-color 0.3s;
+.p-dropdown-label.p-inputtext {
+  padding: .6rem;
+  border-color: var(--surface-border) !important;
+  background: var(--mask-bg) !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  white-space: nowrap !important;
+  padding: 0.3rem;
+  transition: border-color 0.3s;
 }
 
-.p-checkbox-box.p-component{
+.p-checkbox-box.p-component {
   width: 1rem !important;
   height: 1rem !important;
   max-width: 1rem !important;
   max-height: 1rem !important;
-  margin-top: 0.1rem  !important;
+  margin-top: 0.1rem !important;
 }
 
-.p-dropdown-panel.p-component.p-ripple-disabled.p-connected-overlay-enter-done{
+.p-dropdown-panel.p-component.p-ripple-disabled.p-connected-overlay-enter-done {
   font-size: calc(1 * (0.5vw + 0.5vh)) !important;
 }
 
-body > div.p-dropdown-panel.p-component.p-ripple-disabled.p-connected-overlay-enter-done > div.p-dropdown-header > div > input{
+body>div.p-dropdown-panel.p-component.p-ripple-disabled.p-connected-overlay-enter-done>div.p-dropdown-header>div>input {
   border: var(--surface-border) 2px solid !important;
   padding: .24rem;
 }
 
-body > div.p-dropdown-panel.p-component.p-ripple-disabled.p-connected-overlay-enter-done > div.p-dropdown-header > div > div > input {
+body>div.p-dropdown-panel.p-component.p-ripple-disabled.p-connected-overlay-enter-done>div.p-dropdown-header>div>div>input {
   border: var(--surface-border) 2px solid !important;
   padding: .24rem;
 }
 
-body > div.p-column-filter-overlay.p-component.p-fluid.p-column-filter-overlay-menu.p-ripple-disabled.p-connected-overlay-enter-done > div.p-column-filter-constraints > div > input
-{
+body>div.p-column-filter-overlay.p-component.p-fluid.p-column-filter-overlay-menu.p-ripple-disabled.p-connected-overlay-enter-done>div.p-column-filter-constraints>div>input {
   border: var(--surface-border) 2px solid !important;
   padding: .6rem;
 }
 
-.p-paginator.p-component.p-paginator-bottom.text-xs.p-0.m-0.withpadding > div > span{
+.p-paginator.p-component.p-paginator-bottom.text-xs.p-0.m-0.withpadding>div>span {
   border: var(--surface-border) 2px solid !important;
   padding: .6rem;
 }
@@ -196,7 +200,7 @@ body > div.p-column-filter-overlay.p-component.p-fluid.p-column-filter-overlay-m
   border-color: var(--blue-500) !important;
 }
 
-.withpadding.p-input-icon-right.p-float-label.ml-3.w-full{
+.withpadding.p-input-icon-right.p-float-label.ml-3.w-full {
   font-size: calc(1 * (0.5vw + 0.5vh)) !important;
   border: var(--surface-border) 2px solid !important;
   border-radius: 6px;
@@ -208,18 +212,22 @@ body > div.p-column-filter-overlay.p-component.p-fluid.p-column-filter-overlay-m
   padding: 0rem !important;
 }
 
-.p-dropdown-trigger{
-  color:white !important;
+.p-dropdown-trigger {
+  color: white !important;
 }
 
 .p-accordion .p-accordion-header .p-accordion-header-link {
   padding: 0.2rem !important;
 }
 
-.p-accordion-tab.p-accordion-tab-active{
+.p-accordion-tab.p-accordion-tab-active {
   min-width: 100% !important;
 }
 
-.p-accordion-content{
+.p-accordion-content {
   min-width: 100% !important;
+}
+
+.p-fieldset-legend {
+  color: #FE7600;
 }
