🎨 style(theme.css): rename CSS class from withpadding to w-padding to improve naming consistency The CSS class ".p-dropdown.p-component.p-inputwrapper.p-inputwrapper-filled.withpadding.w-full" has been renamed to ".p-dropdown.p-component.p-inputwrapper.p-inputwrapper-filled.w-padding.w-full" to improve naming consistency with other CSS classes.

--- a/streammasterwebui/src/theme.css
+++ b/streammasterwebui/src/theme.css
@@ -134,7 +134,7 @@
   border-left-color: #0e1315 !important;
 }
 
-.p-dropdown.p-component.p-inputwrapper.p-inputwrapper-filled.w-full {
+.p-dropdown.p-component.p-inputwrapper.p-inputwrapper-filled.withpadding.w-full {
   border: 2px solid var(--surface-border) !important;
   border-radius: 6px;
   max-height: 2rem !important;
