--- a/streammasterwebui/src/theme.css
+++ b/streammasterwebui/src/theme.css
@@ -51,6 +51,17 @@
   transition: border-color 0.3s;
 }
 
+.p-inputtext.p-component.p-filled.p-password-input {
+  font-size: calc(1 * (0.5vw + 0.5vh)) !important;
+  border-color: transparent !important;
+  background: var(--mask-bg) !important;
+  overflow: hidden !important;
+  text-overflow: unset !important;
+  white-space: nowrap !important;
+  padding: 0rem;
+  transition: border-color 0.3s;
+}
+
 .p-inputtext {
   font-size: calc(1 * (0.5vw + 0.5vh)) !important;
   border-color: transparent !important;
@@ -125,7 +136,6 @@
 .p-password.p-component.p-inputwrapper.p-input-icon-right.withpadding {
   border: 2px solid var(--surface-border) !important;
   min-height: 1.8rem;
-  max-height: 1.8rem;
   border-radius: 6px;
 }
 
