--- a/streammasterwebui/src/theme.css
+++ b/streammasterwebui/src/theme.css
@@ -249,7 +249,7 @@ body>div.p-column-filter-overlay.p-component.p-fluid.p-column-filter-overlay-men
 
 .iconSelector .p-dropdown .p-dropdown-label {
   min-height: 1.5rem !important;
-  padding: 0rem !important;
+  /* padding: 0rem !important; */
 }
 
 .p-dropdown.p-component.p-inputwrapper.p-inputwrapper-filled.iconSelector {
