--- a/streammasterwebui/src/components/dataSelector/DataSelector.css
+++ b/streammasterwebui/src/components/dataSelector/DataSelector.css
@@ -1,7 +1,3 @@
-.videostreamSelected {
-  background-color: #91633254 !important;
-}
-
 .dataselector .p-paginator .p-dropdown {
   padding: 0 !important;
   height: 2.2rem !important;
@@ -22,18 +18,18 @@
   padding-bottom: 0.2rem !important;
 }
 
-.dataselector .p-paginator .p-paginator-first,
+/* .dataselector .p-paginator .p-paginator-first,
 .p-paginator .p-paginator-prev,
 .p-paginator .p-paginator-next,
 .p-paginator .p-paginator-last {
   padding: 0.0rem 0 !important;
   min-width: 1.3rem !important;
-}
+} */
 
-.dataselector .p-selectable-row {
+/* .dataselector .p-selectable-row {
 
   padding: 0.0rem 0 !important;
-}
+} */
 
 
 .dataselector .header {
@@ -70,15 +66,14 @@
   max-height: 1.8rem !important;
 }
 
+
 .dataselector .p-datatable {
   font-size: calc(1 * (0.52vw + 0.52vh)) !important;
-  /* padding: 0 !important; */
 }
 
-.dataselector .p-paginator .p-dropdown .p-dropdown-label {
+/* .dataselector .p-paginator .p-dropdown .p-dropdown-label {
   font-size: calc(1 * (0.5vw + 0.5vh)) !important;
-
-}
+} */
 
 .dataselector .p-datatable .p-datatable-header {
   margin: 0 !important;
