--- a/streammasterwebui/src/theme.css
+++ b/streammasterwebui/src/theme.css
@@ -1,234 +1,238 @@
-/* .debug {
-  border: 1px solid red !important;
-}
+ /* .debug {
+   border: 1px solid red !important;
+ } */
 
-.debugBlue {
-  border: 1px solid blue !important;
-} */
+ .debugBlue {
+   border: 1px solid blue !important;
+ }
 
-:root {
-  --main-border-color: #fe77005d;
-  --common-bg: var(--mask-bg);
-  --common-border-color: var(--surface-border);
-  --common-border-width: 2px;
-  --common-font-size: calc(1 * (0.5vw + 0.5vh));
-  --common-font-size-large: calc(1 * (0.6vw + 0.6vh));
-  --button-danger-bg: #c73939;
-  --button-info-bg: #5361ff;
-  --button-success-bg: #6dc831ee;
-  --focus-border-color: var(--blue-500);
-  --input-height: 1.4rem;
-  --orange-color: #FE7600;
-}
+ :root {
+   --main-border-color: #fe77005d;
+   --common-bg: var(--mask-bg);
+   --common-border-color: var(--surface-border);
+   --common-border-width: 2px;
+   --common-font-size: calc(1 * (0.5vw + 0.5vh));
+   --common-font-size-large: calc(1 * (0.6vw + 0.6vh));
+   --button-danger-bg: #c73939;
+   --button-info-bg: #5361ff;
+   --button-success-bg: #6dc831ee;
+   --focus-border-color: var(--blue-500);
+   --input-height: 1.4rem;
+   --orange-color: #FE7600;
+ }
 
-.videostreamSelected {
-  background-color: #91633254 !important;
-}
+ .orange-color {
+   color: var(--orange-color) !important;
+ }
 
-.banbutton.p-button-icon-only.p-button-text {
-  color: red
-}
+ .videostreamSelected {
+   background-color: #91633254 !important;
+ }
 
-.banbutton.p-button-icon-only.p-disabled.p-button-text {
-  color: var(--common-bg)
-}
+ .banbutton.p-button-icon-only.p-button-text {
+   color: red
+ }
 
-.withpadding {
-  padding: 0.3rem;
-}
+ .banbutton.p-button-icon-only.p-disabled.p-button-text {
+   color: var(--common-bg)
+ }
 
-.left_border {
-  border-left: 2px solid var(--common-border-color) !important;
-}
+ .withpadding {
+   padding: 0.3rem;
+ }
 
-.icon-template {
-  height: var(--input-height);
-  justify-content: start;
-  align-items: center;
-}
+ .left_border {
+   border-left: 2px solid var(--common-border-color) !important;
+ }
 
-.icon-template-large {
-  height: 6rem;
-  justify-content: start;
-  align-items: center;
-}
+ .icon-template {
+   height: var(--input-height);
+   justify-content: start;
+   align-items: center;
+ }
 
-.icon-template-large img {
-  max-width: 6rem;
-  max-height: 6rem;
-  object-fit: contain;
-}
+ .icon-template-large {
+   height: 6rem;
+   justify-content: start;
+   align-items: center;
+ }
 
-.icon-template img,
-.default-icon {
-  max-width: 1.3rem;
-  max-height: 1.3rem;
-  object-fit: contain;
-}
+ .icon-template-large img {
+   max-width: 6rem;
+   max-height: 6rem;
+   object-fit: contain;
+ }
 
-.icon-option-template {
-  display: flex;
-  width: 100%;
-  align-items: center;
-  text-align: start;
-}
+ .icon-template img,
+ .default-icon {
+   max-width: 1.3rem;
+   max-height: 1.3rem;
+   object-fit: contain;
+ }
 
-.icon-option-template img {
-  max-width: 3rem;
-  max-height: 3.4rem;
-  object-fit: contain;
-}
+ .icon-option-template {
+   display: flex;
+   width: 100%;
+   align-items: center;
+   text-align: start;
+ }
 
-.icon-option-name {
-  padding: 0 0 0 1rem;
-  white-space: normal;
-  width: 100%;
-}
+ .icon-option-template img {
+   max-width: 3rem;
+   max-height: 3.4rem;
+   object-fit: contain;
+ }
 
-.p-inputtext {
-  background-color: transparent;
-  overflow: hidden !important;
-  padding: 0.0rem 0.0rem 0.0rem 0.5rem !important;
-  transition: border-color 0.3s;
-}
+ .icon-option-name {
+   padding: 0 0 0 1rem;
+   white-space: normal;
+   width: 100%;
+ }
 
-.p-inputtext,
-.p-dropdown-item {
-  font-size: var(--common-font-size) !important;
-  overflow: hidden !important;
-  text-overflow: ellipsis !important;
-  white-space: nowrap !important;
-}
+ .p-inputtext {
+   background-color: transparent;
+   overflow: hidden !important;
+   padding: 0.0rem 0.0rem 0.0rem 0.5rem !important;
+   transition: border-color 0.3s;
+ }
 
-.p-dropdown {
-  background-color: transparent;
-  border-color: transparent;
-  height: var(--input-height);
-  font-size: var(--common-font-size) !important;
-  overflow: hidden !important;
-  padding: 0 !important;
-  text-overflow: ellipsis !important;
-  white-space: nowrap !important;
-  transition: border-color 0.3s;
-}
+ .p-inputtext,
+ .p-dropdown-item {
+   font-size: var(--common-font-size) !important;
+   overflow: hidden !important;
+   text-overflow: ellipsis !important;
+   white-space: nowrap !important;
+ }
 
-.p-paginator .p-dropdown.p-component.p-inputwrapper.p-inputwrapper-filled {
-  align-items: center;
-  border: 2px solid var(--common-border-color) !important;
-}
+ .p-dropdown {
+   background-color: transparent;
+   border-color: transparent;
+   height: var(--input-height);
+   font-size: var(--common-font-size) !important;
+   overflow: hidden !important;
+   padding: 0 !important;
+   text-overflow: ellipsis !important;
+   white-space: nowrap !important;
+   transition: border-color 0.3s;
+ }
 
-.p-inputnumber {
-  background-color: transparent;
-  border-color: transparent !important;
-  height: var(--input-height);
-  font-size: var(--common-font-size) !important;
-  overflow: hidden !important;
-  padding: 0 !important;
-  text-overflow: ellipsis !important;
-  white-space: nowrap !important;
-  transition: border-color 0.3s;
-}
+ .p-paginator .p-dropdown.p-component.p-inputwrapper.p-inputwrapper-filled {
+   align-items: center;
+   border: 2px solid var(--common-border-color) !important;
+ }
 
-.p-dropdown-filter-container {
-  height: var(--input-height);
-}
+ .p-inputnumber {
+   background-color: transparent;
+   border-color: transparent !important;
+   height: var(--input-height);
+   font-size: var(--common-font-size) !important;
+   overflow: hidden !important;
+   padding: 0 !important;
+   text-overflow: ellipsis !important;
+   white-space: nowrap !important;
+   transition: border-color 0.3s;
+ }
 
-.p-dropdown-filter.p-inputtext.p-component {
-  height: var(--input-height);
-}
+ .p-dropdown-filter-container {
+   height: var(--input-height);
+ }
 
-.p-dropdown-header {
-  padding: .6rem !important;
-}
+ .p-dropdown-filter.p-inputtext.p-component {
+   height: var(--input-height);
+ }
 
-.bordered-text {
-  border: 2px solid var(--common-border-color) !important;
-  border-radius: 0.3rem;
-  font-size: var(--common-font-size) !important;
-  height: var(--input-height*1.5);
-  padding: 0.3rem;
-}
+ .p-dropdown-header {
+   padding: .6rem !important;
+ }
 
-.text-large {
-  font-size: var(--common-font-size-large) !important;
-  height: var(--input-height*1.5);
-  padding: 0.3rem;
-}
+ .bordered-text {
+   border: 2px solid var(--common-border-color) !important;
+   border-radius: 0.3rem;
+   font-size: var(--common-font-size) !important;
+   height: var(--input-height*1.5);
+   padding: 0.3rem;
+ }
 
-.bordered-text-large {
-  border: 2px solid var(--common-border-color) !important;
-  border-radius: 0.3rem;
-  font-size: var(--common-font-size-large) !important;
-  height: var(--input-height*1.5);
-  padding: 0.3rem;
-}
+ .text-large {
+   font-size: var(--common-font-size-large) !important;
+   height: var(--input-height*1.5);
+   padding: 0.3rem;
+ }
 
-.p-inputnumber:enabled:focus,
-.p-inputtext:enabled:focus,
-.p-dropdown:enabled:focus {
-  border-color: var(--focus-border-color) !important;
-}
+ .bordered-text-large {
+   border: 2px solid var(--common-border-color) !important;
+   border-radius: 0.3rem;
+   font-size: var(--common-font-size-large) !important;
+   height: var(--input-height*1.5);
+   padding: 0.3rem;
+ }
 
-.p-multiselect-label,
-.p-accordion .p-accordion-header .p-accordion-header-link {
-  padding: .2rem !important;
-}
+ .p-inputnumber:enabled:focus,
+ .p-inputtext:enabled:focus,
+ .p-dropdown:enabled:focus {
+   border-color: var(--focus-border-color) !important;
+ }
 
-.p-button.p-button-danger {
-  background: var(--button-danger-bg);
-  border: 1px solid var(--button-danger-bg);
-  color: #0e1315;
-}
+ .p-multiselect-label,
+ .p-accordion .p-accordion-header .p-accordion-header-link {
+   padding: .2rem !important;
+ }
 
-.p-button.p-button-info {
-  background: var(--button-info-bg);
-  border: 1px solid var(--button-info-bg);
-  color: #ffffff;
-}
+ .p-button.p-button-danger {
+   background: var(--button-danger-bg);
+   border: 1px solid var(--button-danger-bg);
+   color: #0e1315;
+ }
 
-.p-button.p-button-success {
-  background: var(--button-success-bg);
-  border: 1px solid var(--button-success-bg);
-  color: #0e1315;
-}
+ .p-button.p-button-info {
+   background: var(--button-info-bg);
+   border: 1px solid var(--button-info-bg);
+   color: #ffffff;
+ }
 
-
-.p-inputgroup-addon {
-  padding: .5rem !important;
-}
-
-.p-button.p-button-danger {
-  background: var(--button-danger-bg);
-  border: var(--common-border-width) solid var(--button-danger-bg);
-  color: #0e1315;
-}
-
-.p-button.p-button-info {
-  background: var(--button-info-bg);
-  border: var(--common-border-width) solid var(--button-info-bg);
-  color: #ffffff;
-}
-
-.p-button.p-button-success {
-  background: var(--button-success-bg);
-  border: var(--common-border-width) solid var(--button-success-bg);
-  color: #0e1315;
-}
-
-.p-inputnumber-buttons-stacked {
-  align-items: center !important;
-}
-
-.p-inputnumber-button-group {
-  max-height: 1.8rem;
-}
+ .p-button.p-button-success {
+   background: var(--button-success-bg);
+   border: 1px solid var(--button-success-bg);
+   color: #0e1315;
+ }
 
 
-.p-accordion-tab.p-accordion-tab-active,
-.p-accordion-content {
-  min-width: 100% !important;
-}
+ .p-inputgroup-addon {
+   padding: .5rem !important;
+ }
 
-.p-fieldset-legend {
-  color: var(--main-border-color);
-}
+ .p-button.p-button-danger {
+   background: var(--button-danger-bg);
+   border: var(--common-border-width) solid var(--button-danger-bg);
+   color: #0e1315;
+ }
+
+ .p-button.p-button-info {
+   background: var(--button-info-bg);
+   border: var(--common-border-width) solid var(--button-info-bg);
+   color: #ffffff;
+ }
+
+ .p-button.p-button-success {
+   background: var(--button-success-bg);
+   border: var(--common-border-width) solid var(--button-success-bg);
+   color: #0e1315;
+ }
+
+ .p-inputnumber-buttons-stacked {
+   align-items: center !important;
+ }
+
+ .p-inputnumber-button-group {
+   max-height: 1.8rem;
+ }
+
+
+ .p-accordion-tab.p-accordion-tab-active,
+ .p-accordion-content {
+   min-width: 100% !important;
+ }
+
+ .p-fieldset-legend {
+   color: var(--main-border-color);
+ }
