--- a/streammasterwebui/src/theme.css
+++ b/streammasterwebui/src/theme.css
@@ -11,14 +11,19 @@
    --common-bg: var(--mask-bg);
    --common-border-color: var(--surface-border);
    --common-border-width: 2px;
-   --common-font-size: calc(1 * (0.5vw + 0.5vh));
-   --common-font-size-large: calc(1 * (0.6vw + 0.6vh));
+   --common-font-size: small;
+   --common-font-size-large: medium;
    --button-danger-bg: #c73939;
    --button-info-bg: #5361ff;
    --button-success-bg: #6dc831ee;
    --focus-border-color: var(--blue-500);
    --input-height: 1.4rem;
    --orange-color: #FE7600;
+ }
+
+ .p-fieldset-legend-text {
+   color: var(--orange-color) !important;
+   font-size: var(--common-font-size-large);
  }
 
  .orange-color {
