--- a/streammasterwebui/src/theme.css
+++ b/streammasterwebui/src/theme.css
@@ -23,10 +23,10 @@
    --orange-color: #FE7600;
  }
 
- .p-button.p-button-icon-only.p-button-rounded {
+ /* .p-button.p-button-icon-only.p-button-rounded {
    width: .08rem !important;
    height: 1.6rem !important;
- }
+ } */
 
  .copyButtonMessage {
    right: 40px;
