--- a/streammasterwebui/lib/styles/index.css
+++ b/streammasterwebui/lib/styles/index.css
@@ -22,9 +22,10 @@ body {
     color: var(--text-color);
     padding: 0.5rem;
 
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
         "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-        sans-serif;
+        sans-serif; */
+
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     /* additions here*/
