--- a/streammasterwebui/lib/styles/index.css
+++ b/streammasterwebui/lib/styles/index.css
@@ -12,15 +12,15 @@ code {
     monospace;
 } */
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
 
 body {
   background: var(--surface-ground);
   color: var(--text-color);
-  padding: 0.5rem;
+  /* padding: 0.5rem; */
 
   /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
         "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -29,7 +29,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* additions here*/
-  height: 100vh;
+  height: 98vh;
+  /* margin: 0.5rem; */
 }
 
 h2 {
