--- a/streammasterwebui/public/Content/Fonts/fonts.css
+++ b/streammasterwebui/public/Content/Fonts/fonts.css
@@ -2,19 +2,14 @@
   font-weight: 300;
   font-style: normal;
   font-family: 'Roboto';
-  src:
-    url('Roboto-Light.woff2?v=1.3.0') format('woff2'),
-    url('Roboto-Light.woff?v=1.3.0') format('woff'),
-    url('Roboto-Light.ttf?v=1.3.0') format('truetype');
+  src: url('Roboto-Light.woff2?v=1.3.0') format('woff2'), url('Roboto-Light.woff?v=1.3.0') format('woff'), url('Roboto-Light.ttf?v=1.3.0') format('truetype');
 }
 
 @font-face {
   font-weight: 400;
   font-style: normal;
   font-family: 'Roboto';
-  src:
-    url('Roboto-Regular.woff2?v=1.3.0') format('woff2'),
-    url('Roboto-Regular.woff?v=1.3.0') format('woff'),
+  src: url('Roboto-Regular.woff2?v=1.3.0') format('woff2'), url('Roboto-Regular.woff?v=1.3.0') format('woff'),
     url('Roboto-Regular.ttf?v=1.3.0') format('truetype');
 }
 
@@ -22,9 +17,7 @@
   font-weight: normal;
   font-style: normal;
   font-family: 'Roboto';
-  src:
-    url('Roboto-Regular.woff2?v=1.3.0') format('woff2'),
-    url('Roboto-Regular.woff?v=1.3.0') format('woff'),
+  src: url('Roboto-Regular.woff2?v=1.3.0') format('woff2'), url('Roboto-Regular.woff?v=1.3.0') format('woff'),
     url('Roboto-Regular.ttf?v=1.3.0') format('truetype');
 }
 
@@ -32,9 +25,7 @@
   font-weight: 400;
   font-style: normal;
   font-family: 'Ubuntu Mono';
-  src:
-    url('UbuntuMono-Regular.eot?#iefix&v=1.3.0') format('embedded-opentype'),
-    url('UbuntuMono-Regular.woff?v=1.3.0') format('woff'),
+  src: url('UbuntuMono-Regular.eot?#iefix&v=1.3.0') format('embedded-opentype'), url('UbuntuMono-Regular.woff?v=1.3.0') format('woff'),
     url('UbuntuMono-Regular.ttf?v=1.3.0') format('truetype');
 }
 
@@ -46,7 +37,5 @@
   font-weight: normal;
   font-style: normal;
   font-family: 'text-security-disc';
-  src:
-    url('text-security-disc.woff?v=1.3.0') format('woff'),
-    url('text-security-disc.ttf?v=1.3.0') format('truetype');
+  src: url('text-security-disc.woff?v=1.3.0') format('woff'), url('text-security-disc.ttf?v=1.3.0') format('truetype');
 }
