--- a/streammasterwebui/lib/styles/theme.css
+++ b/streammasterwebui/lib/styles/theme.css
@@ -187,6 +187,10 @@
   padding: 0.6rem !important;
 }
 
+.smallpt {
+  padding-top: 3.3rem !important;
+}
+
 .bordered-text {
   border: 2px solid var(--common-border-color) !important;
   border-radius: 0.3rem;
