--- a/streammasterwebui/lib/styles/theme.css
+++ b/streammasterwebui/lib/styles/theme.css
@@ -24,6 +24,10 @@
   --orange-color: #fe7600;
 }
 
+.tag-editor {
+  height: 2.2rem;
+}
+
 /* .p-dropdown-label.p-inputtext {
   border: 2px solid var(--common-border-color) !important;
   height: var(--input-height);
@@ -158,6 +162,7 @@
   align-items: center !important;
   justify-content: start !important;
 }
+
 
 .p-dropdown {
   /* background-color: transparent; */
